fix(apache-ignite): run SQL on the Calcite engine and drop ignite-indexing/H2 1.4.197
ignite-indexing's H2 engine pins H2 1.4.197 (GHSA-h376-j262-vhq6 and
GHSA-45hx-wfhj-473x, Dependabot alerts #9, #10). Switch to ignite-calcite 2.18.0
as the default query engine so neither ignite-indexing nor H2 is on the classpath.

No existing test started a real Ignite node (the service and controller tests use
mocks), so add PersonServiceSqlIntegrationTest, which runs findByLastName as real
SQL on an embedded node built from the app's IgniteConfig. Starting a node on
Java 25 needs Ignite's JDK 17+ add-opens list, now in the Surefire argLine.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>